# GooseVF-CLI

./: .gitignore  CMakeLists.txt  README.md
include/: cli.h
src/: cli.cpp  cxxopts.hpp  main.cpp
